update package name correctly